# DigEscape

./: .gitignore  Cargo.toml  README.md
resources/: map3.txt  map4.txt  map_1skeleton.txt  map_2skeleton.txt  map_2skeleton_backtrack.txt  map_2skeleton_intro.txt  map_3skeleton_3holes.txt  map_first.txt  map_follow.txt  map_maze1.txt  map_middleclash.txt  map_skeleton_hole.txt  map_skeleton_platform.txt
resources/maps/: map_3skeleton.txt  map_3skeleton_3holes_harder.txt  map_easy1.txt  map_easy2.txt  map_easy3.txt  map_easy_accidental_fall.txt  map_fall_trap.txt  map_follow.txt  map_follow_2.txt  map_force_stand.txt  map_gravity.txt  map_hard1.txt  map_hard2.txt  map_hard3.txt  map_maze1.txt  map_medium2.txt  map_middleclash_2.txt  map_skeleton_hole.txt  map_teleport.txt
src/: constantes.rs  main.rs  map.rs  particle_system.rs  sound_collection.rs  sprite.rs  transform_compontent.rs  util.rs
src/entities/: ai.rs  cloud.rs  foilage.rs  mod.rs  player.rs  skeleton.rs  teleporter.rs
src/states/: game_state.rs  main_state.rs  mod.rs
utils/wasm/: audio.js  build.sh  gl.js  index.html  resources.tar  zip_resources.sh
