[package]
name = "dig_escape"
version = "0.1.0"
authors = ["TanTanDev <tantangamedev@gmail.com>"]
edition = "2018"

[dependencies]
gwg = {git = "https://github.com/TanTanDev/good-web-game", package = "good-web-game", branch = "audio"}
nalgebra = { version = "0.20", features = ["mint"] }
rand = "0.7.3"
mint = "0.5"
